--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
     <div class="hero">
         <h1>Silent Struggle No More: Regain Your Confidence Naturally</h1>
-        <img src="image1banner" alt="Natural Bladder Support Solution" style="max-width: 400px; margin: 20px 0;">
+        <img src="images/image1banner.jpeg" alt="Natural Bladder Support Solution" style="max-width: 400px; margin: 20px 0;">
     </div>
 
     <div class="container">
