--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             height: 60vh;
             min-height: 400px;
             background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-                        url('image1banner.jpeg') center/cover;
+                        url('images/image1banner.jpeg') center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
