--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         </div>
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="[SALES_PAGE_URL]" class="cta-button">Discover Natural Relief →</a>
+            <a href="[https://201d3oy8qh77ak1asgqd-8au6b.hop.clickbank.net]" class="cta-button">Discover Natural Relief →</a>
             <br>
-            <a href="[SALES_PAGE_URL]" class="cta-button" style="background: #4CAF50; margin-top: 15px;">Learn More →</a>
+            <a href="[https://201d3oy8qh77ak1asgqd-8au6b.hop.clickbank.net]" class="cta-button" style="background: #4CAF50; margin-top: 15px;">Learn More →</a>
         </div>
 
         <footer>
